--- a/swagger/templates/JavaJaxRS/api.mustache
+++ b/swagger/templates/JavaJaxRS/api.mustache
@@ -20,6 +20,7 @@ import org.glassfish.jersey.media.multipart.FormDataContentDisposition;
 import org.glassfish.jersey.media.multipart.FormDataParam;
 
 import javax.servlet.ServletConfig;
+import javax.servlet.ServletContext;
 import javax.ws.rs.core.Context;
 import javax.ws.rs.core.Response;
 import javax.ws.rs.core.SecurityContext;
@@ -37,11 +38,11 @@ import javax.validation.constraints.*;
 public class {{classname}}  {
    private final {{classname}}Service delegate;
 
-   public {{classname}}(@Context ServletConfig servletContext) {
+   public {{classname}}(@Context ServletConfig servletConfig, @Context ServletContext servletContext) {
       {{classname}}Service delegate = null;
 
-      if (servletContext != null) {
-         String implClass = servletContext.getInitParameter("{{classname}}.implementation");
+      if (servletConfig != null) {
+         String implClass = servletConfig.getInitParameter("{{classname}}.implementation");
          if (implClass != null && !"".equals(implClass.trim())) {
             try {
                delegate = ({{classname}}Service) Class.forName(implClass).newInstance();
@@ -55,6 +56,7 @@ public class {{classname}}  {
          delegate = {{classname}}ServiceFactory.get{{classname}}();
       }
 
+      delegate.setServletContext(servletContext);
       this.delegate = delegate;
    }
 
